--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -7,16 +7,19 @@
     }
 
     .page-title {
-        padding: 1rem 0;
+        padding: 0.8rem 0;
         margin: 0;
     }
+}
 
-    .hate-love:hover span {
-        display: none;
-    }
-    .hate-love:hover:before {
-        content: "You hate me"
-    }
+.fancy-span {
+    font-size: 0.85rem;
+    margin-left: 10px;
+    padding: 5px 8px 5px 8px;
+    background-color: #1DB0B5;
+    border-radius: 15px;
+    color: #FFF;
+    font-weight: 400;
 }
 
 .top-recipe-section {
@@ -53,30 +56,25 @@
     padding-bottom: 15px;
     margin-left: -15px;
     span {
-        font-size: 0.85rem;
-        margin-left: 10px;
-        padding: 5px 8px 5px 8px;
-        background-color: #1DB0B5;
-        border-radius: 15px;
-        color: #FFF;
-        font-weight: 400;
+        @extend .fancy-span;
     }
 }
 
 .difficulty-info {
-    margin-left: -10px;
+    margin-left: -5px;
+    padding-bottom: 15px;
     span {
-        font-size: 0.85rem;
-        margin-left: 10px;
-        padding: 5px 8px 5px 8px;
-        background-color: #1DB0B5;
-        border-radius: 15px;
-        color: #FFF;
-        font-weight: 400;
+        @extend .fancy-span;
     }
 }
 
+.ingredient-info {
+padding-bottom: 10px;
+margin-left: -15px;
+}
+
 .favourite-link {
+    margin-left: -40px;
     padding-bottom: 15px;
     color: #000;
 }
@@ -110,7 +108,6 @@
     font-size: 1rem;
     font-style: italic;
 }
-
 
 .main-ingredient,
 .prep-step,
