--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1746,4 +1746,19 @@ form p {
   font-size: 0.9rem;
 }
 
+@media (max-width: 768px) {
+  .top-info,
+.time-info,
+.difficulty-info,
+.ingredient-info,
+.favourite-link {
+    margin-left: 0;
+  }
+
+  .recipe-photo {
+    padding-top: 0;
+    padding-bottom: 10px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
