Ingredient counter added, ingredient name style changed, ingredient scale style changed

--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -120,11 +120,21 @@
     font-style: italic;
 }
 
-.main-ingredient,
 .prep-step,
 .add-tip {
     font-weight: 300;
     font-size: 0.9rem;
+}
+
+.main-ingredient {
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 20px;
+    
+    span {
+        font-weight: 500;
+        color: #1DB0B5;
+    }
 }
 
 
@@ -136,7 +146,7 @@
     .favourite-link {
         margin-left: 0;
     }
-    
+
     .recipe-photo {
         padding-top: 0;
         padding-bottom: 10px;
