--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1334,10 +1334,12 @@ form p {
     bottom: 0;
   }
 }
-#error-page404 .error-page-main {
+#error-page404 .error-page-main,
+#error-page505 .error-page-main {
   padding-top: 4rem;
 }
-#error-page404 .main-container {
+#error-page404 .main-container,
+#error-page505 .main-container {
   min-height: calc(100% - 400px);
 }
 
@@ -1378,7 +1380,8 @@ form p {
 }
 
 @media (max-width: 1365px) {
-  #error-page404 .main-container {
+  #error-page404 .main-container,
+#error-page505 .main-container {
     min-height: calc(100% - 440px);
   }
 }
