Unwanted colon sign removed from second titles

--- a/templates/pages/recipe-page.html
+++ b/templates/pages/recipe-page.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <h3 class="second-title">Ingredients :</h3>
+            <h3 class="second-title">Ingredients</h3>
             <hr class="separate-line"> {% for x in ingredients %}
             <p class="main-ingredient">{{ingredients.index(x) + 1}}. {{x}} -
                 <span class="ingredient-scale">{{ingredients_scale[ingredients.index(x)]}}</span>
@@ -44,7 +44,7 @@
             {% endfor %}
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <h3 class="second-title">Preparation steps :</h3>
+            <h3 class="second-title">Preparation steps</h3>
             <hr class="separate-line"> {% for element in preparation %}
             <div class="prep-container">
                 <h4 class="step-title">Step {{preparation.index(element) + 1}}</h4>
@@ -53,7 +53,7 @@
             {% endfor %}
         </div>
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3 class="second-title">Additional tips :</h3>
+            <h3 class="second-title">Additional tips</h3>
             <hr class="separate-line"> {% if tips|length == 0 %}
             <p class="font-w400">No additional tips..</p>
             {% else %} {% for element in tips %}
