Quick fix - set recipe change to 'recipe-pag' to stop adding active-link class to edit-page link

--- a/templates/pages/recipe-page.html
+++ b/templates/pages/recipe-page.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %} {% set page = "edit-recipe" %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "recipe-page" %} {% block content %}
 <div class="container">
     <h1 class="hidden">Recpie - {{this_recipe['title']}}</h1>
     <div class="this-recipe-container">
