--- a/scss/page-styles/edit-recipe.scss
+++ b/scss/page-styles/edit-recipe.scss
@@ -2,4 +2,9 @@
     .main-button {
         width: 100px;
     }
+    @media (max-width: 768px) {
+        .main-button {
+            width: 100%;
+        }
+    }
 }
