--- a/templates/pages/edit-recipe.html
+++ b/templates/pages/edit-recipe.html
@@ -1,24 +1,29 @@
 {% extends 'layout/base.html' %} {% set page = "edit-recipe" %} {% block content %}
 <div class="container">
     <h1 class="hidden">Edit Recpie</h1>
-    <h2 class="page-title">Edit you recipes</h2>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <form>
-            <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <label for="exampleFormControlSelect1">Edit rcipe</label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                <option value="" selected disabled>Please select recipe</option>
-                {% for doc in recipes_to_edit %}
-                <option>{{doc['title']}}</option>
-                {% endfor %}
-            </select>
-            </div>
-            <div class="form-group col-xs-12 col-sm-3 col-md-3 col-lg-3 col-xl-3">
-                <button type="submit" name="button" class="btn main-button">Edit</button>
-            </div>
-        </form>
+    <div class="col-lg-12">
+        <h2 class="page-title">Edit you recipes</h2>
     </div>
-    <div class="edit-contianer">
+    <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <label for="exampleFormControlSelect1">Edit rcipe</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+            {% if recipe_id != "" %}
+                <option selected>{{recipe_id['title']}}</option>
+                {% for doc in recipes_to_edit %}
+                    <option>{{doc['title']}}</option>
+                {% endfor %}
+            {% else %}
+                <option selected disabled>Please select recipe</option>
+                {% for doc in recipes_to_edit %}
+                    <option>{{doc['title']}}</option>
+                {% endfor %}
+            {% endif %}
+        </select>
+    </div>
+    <div class="form-group col-xs-12 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <form id="edit-form" name="edit-form" action="{{ url_for('edit_recipe',recipe_id = recipe_id)}}" method="POST">
+            <button type="submit" name="button" class="btn main-button">Edit</button>
+        </form>
     </div>
 </div>
 {% endblock %}
