--- a/static/css/style.css
+++ b/static/css/style.css
@@ -966,7 +966,7 @@ form p {
   }
 }
 #favourites-page {
-  padding-top: 70px;
+  padding-top: 60px;
 }
 #favourites-page .main-container {
   min-height: calc(100% - 400px);
@@ -1596,6 +1596,9 @@ form p {
     max-width: 250px;
   }
 }
+#edit-recipe-page {
+  padding-top: 60px;
+}
 #edit-recipe-page .main-button, #edit-recipe-page .main-button-100w {
   width: 100px;
 }
@@ -1603,6 +1606,26 @@ form p {
   #edit-recipe-page .main-button, #edit-recipe-page .main-button-100w {
     width: 100%;
   }
+}
+
+.recipe-edited {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 100%;
+  border: 1px solid #FF3366;
+  background-color: rgba(255, 172, 193, 0.6);
+  border-radius: 5px;
+  text-align: left;
+}
+.recipe-edited p {
+  margin: 0;
+  padding: 0.5rem;
+  font-size: 0.85rem;
+  font-weight: 400;
+  color: #5aac17;
+  color: #FF3366;
 }
 
 #your-recipes-page {
