--- a/templates/pages/edit-recipe.html
+++ b/templates/pages/edit-recipe.html
@@ -1,13 +1,20 @@
 {% extends 'layout/base.html' %} {% set page = "edit-recipe" %} {% block content %}
 <div class="container">
-    <h1 class="hidden">Edit Recpie</h1>
+    <h1 class="hidden">Edit Recipe</h1>
     <div class="col-lg-12">
         <h2 class="page-title">Edit you recipes</h2>
+        {% with errors = get_flashed_messages(category_filter=["recipe-edited"]) %} {% if errors %}
+        <div id="flash-message" class="{{'recipe-edited' if recipe_edited !='' else 'hidden'}}">
+            {%- for msg in errors %}
+            <p>{{ msg }}</p>
+            {% endfor -%}
+        </div>
+        {% endif %} {% endwith %}
     </div>
     <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-        <label for="exampleFormControlSelect1">Edit rcipe</label>
         <select class="form-control" id="exampleFormControlSelect1">
             {% if recipe_id != "" %}
+                <option disabled>Please select recipe</option>
                 <option selected>{{recipe_id['title']}}</option>
                 {% for doc in recipes_to_edit %}
                     <option>{{doc['title']}}</option>
