failed integration of two links to one road, code removed, part of the code invisible

--- a/scss/page-styles/edit-recipe.scss
+++ b/scss/page-styles/edit-recipe.scss
@@ -3,6 +3,9 @@
     .main-button {
         width: 100px;
     }
+    .page-title {
+        padding: 0;
+    }
     @media (max-width: 768px) {
         .main-button {
             width: 100%;
