--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -20,6 +20,7 @@
                     </div>
                 </a>
             </div>
+            <!-- hidden link
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('edit_recipe',recipe_id = recipe_id)}}">
                     <div class="menu-block-card">
@@ -28,6 +29,7 @@
                     </div>
                 </a>
             </div>
+            -->
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 main-card">
                 <a href="{{url_for('your_recipes')}}">
                     <div class="menu-block-card">
